# extensions

./: CMakeLists.txt  extension_config.cmake
duckdb/src/catalog/: duckdb_catalog.cpp  duckdb_table_catalog_entry.cpp
duckdb/src/connector/: duckdb_result_converter.cpp
duckdb/src/function/: duckdb_scan.cpp
duckdb/src/include/connector/: duckdb_result_converter.h
duckdb/src/include/function/: duckdb_scan.h
fts/src/include/index/: fts_index.h
fts/src/index/: fts_index.cpp
fts/src/utils/: fts_utils.cpp
fts/test/test_files/: deletion.test
httpfs/: CMakeLists.txt
httpfs/src/: http_config.cpp  httpfs.cpp  httpfs_extension.cpp  s3fs.cpp  s3fs_config.cpp  xetfs.cpp
httpfs/src/include/: http_config.h  httpfs.h  s3fs_config.h  xetfs.h
httpfs/test/: CMakeLists.txt  xetfs_test.cpp
lance/: CMakeLists.txt
lance/src/: lance_extension.cpp  lance_functions.cpp  lance_node_table.cpp  lance_rel_table.cpp
lance/src/include/: lance_extension.h  lance_functions.h  lance_node_table.h  lance_rel_table.h
lance/test/: CMakeLists.txt  lance_error_scenarios_test.cpp  lance_node_table_test.cpp  lance_rel_table_test.cpp  lance_vector_search_test.cpp  test_list
lance/test/test_files/: lance_complex_queries.test  lance_invalid_storage.test  lance_large_scan.test  test_list
postgres/src/connector/: postgres_connector.cpp
postgres/src/include/connector/: postgres_connector.h
postgres/test/test_files/: postgres.test  sql_query.test
sqlite/test/sqlite_database/: pushdown
sqlite/test/test_files/: sqlite.test
vector/: README.md
vector/src/include/index/: hnsw_index.h
vector/src/index/: hnsw_config.cpp  hnsw_graph.cpp  hnsw_index.cpp
vector/test/test_files/: error.test  filter.test  small.test
